log/build_2025-02-12_15-26-20/lidar_obstacle/stderr.log
  File "/home/batch9/ros2_ws/install/lidar_obstacle/lib/python3.12/site-packages/lidar_obstacle/obstacle_detection.py", line 39
    else if degree>-5 and degree<5 and scan.ranges[i]>=0.5:
         ^^
SyntaxError: expected ':'

